syntax = "proto3";

import "mapreduce/yt/interface/protos/extension.proto";

package NAlice.NData.NAliceShow;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/alice_show";
option java_package = "ru.yandex.alice.protos.data.scenario.alice_show";

message TDayPart {
    enum EValue {
        Undefined = 0;
        Morning = 1;
        Evening = 2;
        Night = 3;

        Ambiguous = 100; // "Утреннее вечернее шоу"
    }
    EValue Value = 1 [json_name = "value", (NYT.column_name) = "value"];
}

message TAge {
    enum EValue {
        Undefined = 0;
        Children = 1;
        Adult = 2;

        Ambiguous = 100; // "Детское взрослое шоу"
    }
    EValue Value = 1 [json_name = "value", (NYT.column_name) = "value"];
}
